--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .full-screen-container {
-    background-image: url("background-image.jpeg");
+    background-image: url("images/background-image.jpeg");
     height: 100vh;
     width: 100vw;
     background-size: cover;
